--- a/writenow-theia/writenow-core/src/browser/style/index.css
+++ b/writenow-theia/writenow-core/src/browser/style/index.css
@@ -15,6 +15,7 @@
 @import './theme-midnight.css';
 @import './theme-warm-gray.css';
 @import './theme-parchment.css';
+@import './theme-high-contrast.css';
 
 /* Theia integration */
 @import './theia-overrides.css';
@@ -25,3 +26,5 @@
 @import './editor.css';
 @import './settings.css';
 @import './p1-features.css';
+@import './accessibility.css';
+@import './p2-features.css';
